# Neural-network-telegram

./: .env.example  .gitignore  DockerfileBot  DockerfileFlask  README.md  docker-compose.yml  pyproject.toml  run_bot.py  wsgi.py
common/: db_api.py  enums.py  settings.py
common/models/: __init__.py  base.py  generations.py  payments.py  reports.py  user.py
common/services/: __init__.py  neiro_api.py  robokassa.py
data/: nginx.conf  settings.json
data/templates/: index.html  offer.html  payment_success.html  policy.html
flask_app/: app.py  extensions.py  forms.py
flask_app/admin/: admin.py  views.py
flask_app/adminlte/: admin.py  models.py  views.py
flask_app/auth/: views.py
flask_app/commands/: README.md  create_superuser.py
flask_app/main_app/: views.py
flask_app/payments_app/: views.py
flask_app/reports_app/: views.py
flask_app/templates/: base.html  master-extended.html
migrations/: alembic.ini
migrations/versions/: 2024_04_19_15_48-a366d0ec2e9a_init.py  2024_04_19_15_49-24530c5a4f5d_init_2.py  2024_04_22_15_00-031219597eaa_set_null_tariff_invoices.py  2024_04_25_19_25-f87bfbce9771_add_chatgpt_daili_limit.py  2024_05_10_11_48-f6b6b70d4238_null_user_in_queries.py  2024_05_10_12_15-2d4e584631e4_null_user_in_relations.py  2024_05_13_19_58-185c56f6dec8_init.py  2024_05_13_19_58-52871a40ff8c_init_2.py
tgbot_app/handlers/: __init__.py  admin_handler.py  ais_handler.py  article_handler.py  diploma_handler.py  empty_handler.py  faq_handler.py  gen_image_handler.py  gen_text_handler.py  gen_video_handler.py  modes_handler.py  premium_handler.py  (+8 more)
(+43 files in other folders)
